--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,19 @@
         <activity android:name=".MainActivity" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/EditTextTheme"></activity>
-        <activity android:name=".EstabelcimentosActivity">
-
-        </activity>
-        <activity android:name=".BrindesActivity">
+            android:theme="@style/EditTextTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".EstabelcimentosActivity"></activity>
+        <activity android:name=".BrindesActivity">
+
+        </activity>
+        <activity android:name=".PagamentoActivity">
+
         </activity>
     </application>
 
