--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,22 +9,22 @@
         android:roundIcon="@drawable/logo_psd"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
+        <activity android:name=".CadastroActivity" />
         <activity
             android:name=".LoginActivity"
             android:theme="@style/EditTextTheme">
+
+        </activity>
+        <activity android:name=".EstabelcimentosActivity" />
+        <activity android:name=".BrindesActivity" />
+        <activity android:name=".PagamentoActivity" />
+        <activity android:name=".PromocoesActivity" />
+        <activity android:theme="@style/EditTextTheme" android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".EstabelcimentosActivity"></activity>
-        <activity android:name=".BrindesActivity">
-
-        </activity>
-        <activity android:name=".PagamentoActivity">
-
         </activity>
     </application>
 
