--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,22 @@
         <activity android:name=".CadastroActivity" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/EditTextTheme">
-
-        </activity>
+            android:theme="@style/EditTextTheme" />
         <activity android:name=".EstabelcimentosActivity" />
         <activity android:name=".BrindesActivity" />
         <activity android:name=".PagamentoActivity" />
         <activity android:name=".PromocoesActivity" />
-        <activity android:theme="@style/EditTextTheme" android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/EditTextTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".EditarActivity" />
+        <activity android:name=".PerfilActivity"></activity>
     </application>
 
 </manifest>
