--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
             android:name=".fragments.LoginFragment"
             android:theme="@style/EditTextTheme" />
         <activity android:name=".fragments.EstabelecimentosFragments" />
-        <activity android:name=".DrawerActivity">
+        <activity
+            android:name=".DrawerActivity"
+            android:theme="@style/EditTextTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,11 +27,10 @@
         <activity android:name=".fragments.PromocoesFragment" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/EditTextTheme">
-
-        </activity>
+            android:theme="@style/EditTextTheme"></activity>
         <activity android:name=".fragments.EditarFragment" />
-        <activity android:name=".fragments.PerfilFragment"></activity>
+        <activity android:name=".fragments.PerfilFragment" />
+        <activity android:name=".LoginActivity" android:theme="@style/EditTextTheme"></activity>
     </application>
 
 </manifest>
