--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:roundIcon="@drawable/logo_psd"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CadastroActivity" />
+        <activity android:name=".activity.CadastroActivity" />
         <activity
-            android:name=".fragments.LoginFragment"
+            android:name=".activity.fragments.LoginFragment"
             android:theme="@style/EditTextTheme" />
-        <activity android:name=".fragments.EstabelecimentosFragments" />
+        <activity android:name=".activity.fragments.EstabelecimentosFragments" />
         <activity
-            android:name=".DrawerActivity"
+            android:name=".activity.DrawerActivity"
             android:theme="@style/EditTextTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,14 +23,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PagamentoActivity" />
-        <activity android:name=".fragments.PromocoesFragment" />
+        <activity android:name=".activity.PagamentoActivity" />
+        <activity android:name=".activity.fragments.PromocoesFragment" />
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/EditTextTheme"></activity>
-        <activity android:name=".fragments.EditarFragment" />
-        <activity android:name=".fragments.PerfilFragment" />
-        <activity android:name=".LoginActivity" android:theme="@style/EditTextTheme"></activity>
+            android:name=".activity.MainActivity"
+            android:theme="@style/EditTextTheme" />
+        <activity android:name=".activity.fragments.EditarFragment" />
+        <activity android:name=".activity.fragments.PerfilFragment" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:theme="@style/EditTextTheme" />
+        <activity android:name=".activity.EditarActivity"></activity>
     </application>
 
 </manifest>
